# finding_primes

./: .gitignore  CMakeLists.txt  MasterWorker.hpp  ParallelForExec.h  ParallelForExec.hpp  README.md  benchmark.sh  main.cpp  main_copy.cpp  master_worker.hpp
gnuplot-scripts/: speed10mln.gp  speed1mln.gp
gnuplot-scripts/data/: benchmark-1000000.txt
plotting-and-data/: scal10mln.gp  scal1mln.gp
plotting-and-data/data/: benchmark-10000000.txt
